--- a/health.html
+++ b/health.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HealthBot</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,8 +28,8 @@
       </div>
          </div>
   </div>
-  <script src="js/calc.js"></script>
-  <script src="js/script.js"></script>
+  <script src="calc.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
