--- a/health.html
+++ b/health.html
@@ -28,8 +28,8 @@
       </div>
          </div>
   </div>
-  <script src="calc.js"></script>
-  <script src="script.js"></script>
+  <script src="Calc.js"></script>
+  <script src="Script.js"></script>
 </body>
 
 </html>
